; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_setting_get_string_representation_st_float_video_refresh_rate_auto.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_setting_get_string_representation_st_float_video_refresh_rate_auto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [33 x i8] c"%.3f Hz (%.1f%% dev, %u samples)\00", align 1
@MENU_ANIMATION_CTL_SET_ACTIVE = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_NOT_AVAILABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i64)* @setting_get_string_representation_st_float_video_refresh_rate_auto to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setting_get_string_representation_st_float_video_refresh_rate_auto(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca double, align 8
  %8 = alloca double, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  store double 0.000000e+00, double* %7, align 8
  store double 0.000000e+00, double* %8, align 8
  store i32 0, i32* %9, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %3
  br label %32

13:                                               ; preds = %3
  %14 = call i64 @video_monitor_fps_statistics(double* %7, double* %8, i32* %9)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %26

16:                                               ; preds = %13
  %17 = load i8*, i8** %5, align 8
  %18 = load i64, i64* %6, align 8
  %19 = load double, double* %7, align 8
  %20 = load double, double* %8, align 8
  %21 = fmul double 1.000000e+02, %20
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @snprintf(i8* %17, i64 %18, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), double %19, double %21, i32 %22)
  %24 = load i32, i32* @MENU_ANIMATION_CTL_SET_ACTIVE, align 4
  %25 = call i32 @menu_animation_ctl(i32 %24, i32* null)
  br label %32

26:                                               ; preds = %13
  %27 = load i8*, i8** %5, align 8
  %28 = load i32, i32* @MENU_ENUM_LABEL_VALUE_NOT_AVAILABLE, align 4
  %29 = call i32 @msg_hash_to_str(i32 %28)
  %30 = load i64, i64* %6, align 8
  %31 = call i32 @strlcpy(i8* %27, i32 %29, i64 %30)
  br label %32

32:                                               ; preds = %12, %26, %16
  ret void
}

declare dso_local i64 @video_monitor_fps_statistics(double*, double*, i32*) #1

declare dso_local i32 @snprintf(i8*, i64, i8*, double, double, i32) #1

declare dso_local i32 @menu_animation_ctl(i32, i32*) #1

declare dso_local i32 @strlcpy(i8*, i32, i64) #1

declare dso_local i32 @msg_hash_to_str(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
